Prepared for eb deploy