@@ -5,6 +5,7 @@ import com.it.revolution.customer.service.app.model.entity.Customer;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CustomerMapper {
@@ -12,7 +13,7 @@ public class CustomerMapper {
     public List<CustomerDto> mapToDtos(List<Customer> customers) {
         return customers.stream()
                 .map(this::mapToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public CustomerDto mapToDto(Customer model) {
